<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">360 Theme</string>
	<string name="action_settings">Settings</string>
	<string name="theme">Theme:</string>
	<string name="author">Author:</string>
	<string name="size">Size:</string>
	<string name="size_value">00KB</string>
	<string name="theme_value">360</string>
	<string name="author_value">unknown</string>
</resources>
