<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MainActivity" >
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:text="All Rights Reserved @360 Launcher"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="@color/holoblue" />
	<RelativeLayout
		android:id="@+id/relativeLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/textView1"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="59dp" >
		<Button
			android:id="@+id/install"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_toLeftOf="@+id/exit"
			android:text="Install" />
		<Button
			android:id="@+id/exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:text="Exit" />
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/relativeLayout2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal" >
		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:text="@string/theme"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
			android:id="@+id/textView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/textView2"
			android:text="@string/theme_value"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView2"
			android:text="@string/author"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TextView
			android:id="@+id/textView7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView6"
			android:layout_toRightOf="@+id/textView2"
			android:text="@string/size_value"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/textView3"
			android:layout_alignBottom="@+id/textView3"
			android:layout_alignLeft="@+id/textView7"
			android:text="@string/author_value"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView3"
			android:text="@string/size"
			android:textColor="@color/holoblue"
			android:textAppearance="?android:attr/textAppearanceSmall" />
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/relativeLayout1"
		android:layout_below="@+id/relativeLayout2"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="56dp" >
		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:src="@drawable/preview_1" />
	</RelativeLayout>
	<TextView
		android:id="@+id/complete"
		android:visibility="gone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/textView1"
		android:layout_alignLeft="@+id/relativeLayout1"
		android:layout_alignRight="@+id/textView1"
		android:layout_marginBottom="37dp"
		android:gravity="center_horizontal"
		android:text="Installation Complete!"
		android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>